--- a/set-link/serial-udp.conf
+++ b/set-link/serial-udp.conf
@@ -1,13 +1,13 @@
 BIN_PATH=/app/
 SCRIPTS_PATH=/app/set-link/
-BTATTACH_DEVICE=/dev/serial/by-path/platform-fd500000.pcie-pci-0000:01:00.0-usb-0:1.2.5:1.0-port0
-BTATTACH_BAUD=921600
-BTATTACH_PROTOCOL=h4
-BTATTACH_HWFLOW=1
-SUDPFWD_DEVICE=/dev/serial/by-path/platform-fd500000.pcie-pci-0000:01:00.0-usb-0:1.2.6:1.0-port0
-SUDPFWD_BAUD=921600
-SUDPFWD_SERVER="192.168.0.142"
-SUDPFWD_PORT=3333
-SUDPFWD_HWFLOW=1
-SUDPFWD_FLOWDEBUG=0
-SUDPFWD_DATADEBUG=0
+BTATTACH_DEVICE=$BTATTACH_DEVICE
+BTATTACH_BAUD=$BTATTACH_BAUD
+BTATTACH_PROTOCOL=$BTATTACH_PROTOCOL
+BTATTACH_HWFLOW=$BTATTACH_HWFLOW
+SUDPFWD_DEVICE=$SUDPFWD_DEVICE
+SUDPFWD_BAUD=$SUDPFWD_BAUD
+SUDPFWD_SERVER=$SUDPFWD_SERVE
+SUDPFWD_PORT=$SUDPFWD_PORT
+SUDPFWD_HWFLOW=$SUDPFWD_HWFLOW
+SUDPFWD_FLOWDEBUG=$SUDPFWD_FLOWDEBUG
+SUDPFWD_DATADEBUG=$SUDPFWD_DATADEBUG
