Updated in sync with libproduct.sh

--- a/set-link/serial-udp.conf
+++ b/set-link/serial-udp.conf
@@ -1,13 +1,13 @@
 BIN_PATH=/app/
 SCRIPTS_PATH=/app/set-link/
-BTATTACH_DEVICE=$BTATTACH_DEVICE
-BTATTACH_BAUD=$BTATTACH_BAUD
-BTATTACH_PROTOCOL=$BTATTACH_PROTOCOL
-BTATTACH_HWFLOW=$BTATTACH_HWFLOW
-SUDPFWD_DEVICE=$SUDPFWD_DEVICE
-SUDPFWD_BAUD=$SUDPFWD_BAUD
-SUDPFWD_SERVER=$SUDPFWD_SERVE
-SUDPFWD_PORT=$SUDPFWD_PORT
-SUDPFWD_HWFLOW=$SUDPFWD_HWFLOW
-SUDPFWD_FLOWDEBUG=$SUDPFWD_FLOWDEBUG
-SUDPFWD_DATADEBUG=$SUDPFWD_DATADEBUG
+BTATTACH_DEVICE=$BLE_BTATTACH_DEVICE
+BTATTACH_BAUD=$BLE_BTATTACH_BAUD
+BTATTACH_PROTOCOL=$BLE_BTATTACH_PROTOCOL
+BTATTACH_HWFLOW=$BLE_BTATTACH_HWFLOW
+SUDPFWD_DEVICE=$BLE_SUDPFWD_DEVICE
+SUDPFWD_BAUD=$BLE_SUDPFWD_BAUD
+SUDPFWD_SERVER=$BLE_SUDPFWD_SERVE
+SUDPFWD_PORT=$BLE_SUDPFWD_PORT
+SUDPFWD_HWFLOW=$BLE_SUDPFWD_HWFLOW
+SUDPFWD_FLOWDEBUG=$BLE_SUDPFWD_FLOWDEBUG
+SUDPFWD_DATADEBUG=$BLE_SUDPFWD_DATADEBUG
