Fix one typo serial-udp.config

--- a/set-link/serial-udp.conf
+++ b/set-link/serial-udp.conf
@@ -6,7 +6,7 @@ BTATTACH_PROTOCOL=$BLE_BTATTACH_PROTOCOL
 BTATTACH_HWFLOW=$BLE_BTATTACH_HWFLOW
 SUDPFWD_DEVICE=$BLE_SUDPFWD_DEVICE
 SUDPFWD_BAUD=$BLE_SUDPFWD_BAUD
-SUDPFWD_SERVER=$BLE_SUDPFWD_SERVE
+SUDPFWD_SERVER=$BLE_SUDPFWD_SERVER
 SUDPFWD_PORT=$BLE_SUDPFWD_PORT
 SUDPFWD_HWFLOW=$BLE_SUDPFWD_HWFLOW
 SUDPFWD_FLOWDEBUG=$BLE_SUDPFWD_FLOWDEBUG
