Updated from the ha_addon branch

--- a/set-link/serial-udp.conf
+++ b/set-link/serial-udp.conf
@@ -1,9 +1,14 @@
-BIN_PATH=/app/
-SCRIPTS_PATH=/app/serial-udp/
+BIN_PATH=/home/`whoami`/go/bin/serial-udp
+SCRIPTS_PATH=/home/`whoami`/go/bin/serial-udp/set-link
+BTATTACH_DEVICE=
+BTATTACH_BAUD=921600
+BTATTACH_PROTOCOL=h4
+BTATTACH_HWFLOW=0
 SUDPFWD_DEVICE=
 SUDPFWD_BAUD=921600
-SUDPFWD_SERVER=192.168.0.42
+SUDPFWD_SERVER=127.0.0.1
 SUDPFWD_PORT=3333
-SUDPFWD_HWFLOW=1
+SUDPFWD_HWFLOW=0
 SUDPFWD_FLOWDEBUG=0
 SUDPFWD_DATADEBUG=0
+
