Fixed path of the tests in run-test.sh

--- a/set-link/serial-udp.conf
+++ b/set-link/serial-udp.conf
@@ -1,5 +1,5 @@
-BIN_PATH=/app/
-SCRIPTS_PATH=/app/set-link/
+BIN_PATH=/app
+SCRIPTS_PATH=/app/set-link
 BTATTACH_DEVICE=$BLE_BTATTACH_DEVICE
 BTATTACH_BAUD=$BLE_BTATTACH_BAUD
 BTATTACH_PROTOCOL=$BLE_BTATTACH_PROTOCOL
