Fixed scripts after debug session on rpi

--- a/set-link/serial-udp.conf
+++ b/set-link/serial-udp.conf
@@ -1,5 +1,5 @@
-BIN_PATH=/home/`whoami`/go/bin/serial-udp
-SCRIPTS_PATH=/home/`whoami`/go/bin/serial-udp/set-link
+BIN_PATH=/home/id/go/bin/serial-udp
+SCRIPTS_PATH=/home/id/go/bin/serial-udp/set-link
 BTATTACH_DEVICE=
 BTATTACH_BAUD=921600
 BTATTACH_PROTOCOL=h4
@@ -11,4 +11,4 @@ SUDPFWD_PORT=3333
 SUDPFWD_HWFLOW=0
 SUDPFWD_FLOWDEBUG=0
 SUDPFWD_DATADEBUG=0
-DEBUG_TESTS="true"
+DEBUG_TESTS="false"
